# cookiecutter-pypackage

./: README.rst
{{cookiecutter.project_slug}}/: .editorconfig  MANIFEST.in  Makefile  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
{{cookiecutter.project_slug}}/.github/workflows/: check.yml
{{cookiecutter.project_slug}}/docs/: Makefile  make.bat
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst  modules.rst
{{cookiecutter.project_slug}}/docs/source/releases/: index.rst  version_0.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  {{cookiecutter.project_slug}}.py
